--- a/index.ipynb
+++ b/index.ipynb
@@ -92,7 +92,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x111deb420>"
+       "<sqlite3.Cursor at 0x7f62993d05e0>"
       ]
      },
      "execution_count": 2,
@@ -266,7 +266,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>1002</td>\n",
        "      <td>Murphy</td>\n",
        "      <td>Diane</td>\n",
@@ -277,7 +277,7 @@
        "      <td>President</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>1056</td>\n",
        "      <td>Patterson</td>\n",
        "      <td>Mary</td>\n",
@@ -288,7 +288,7 @@
        "      <td>VP Sales</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>1076</td>\n",
        "      <td>Firrelli</td>\n",
        "      <td>Jeff</td>\n",
@@ -299,7 +299,7 @@
        "      <td>VP Marketing</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>1088</td>\n",
        "      <td>Patterson</td>\n",
        "      <td>William</td>\n",
@@ -310,7 +310,7 @@
        "      <td>Sales Manager (APAC)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>1102</td>\n",
        "      <td>Bondur</td>\n",
        "      <td>Gerard</td>\n",
